# c0-parser

./: CMakeLists.txt  README.md  gen_vs2015project.bat  gen_vs2017project.bat
data/: func.c0  helloworld.c0  loop.c0  var_decl.c0
example/: CMakeLists.txt  rewrite_ast.cpp
examples/: CMakeLists.txt  dump_token.cpp
scripts/: gen_vs2015project.bat  gen_vs2017project.bat
src/: CMakeLists.txt  all_ast.h  analyser.cpp  analyser.h  ast.cpp  ast.h  decl_analyser.cpp  decl_ast.cpp  decl_ast.h  dump_visitor.cpp  dump_visitor.h  expr_analyser.cpp  expr_ast.cpp  expr_ast.h  main.cpp  stmt_analyser.cpp  stmt_ast.cpp  stmt_ast.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h
test/: CMakeLists.txt  tokenizer.cpp
